# axum_base

./: .env  .envrc  .gitignore  Cargo.toml  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  readme.md
.sqlx/: query-fbfa1a6b1503518b5ea215b908d806d38119546b3e7bbcdaba0fa78f87c50c6e.json
config/: variables.nix
migrations/: 20240522184035_init.up.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/http/: mod.rs  post.rs
src/models/: post.rs
src/routes/: post.rs
