[package]
name = "axum_base"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["multipart", "http2"]}
tokio = {version = "1.37.0", features = ["full"]}
dotenv = "0.15.0"
serde = {version="1.0.201", features=["derive"]}
serde_json = "1.0.117"
tower-http = {version = "0.5.2", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
sqlx = {version = "0.7.4", features = [ "runtime-tokio", "mysql" ]}
